# nation-optimizer-rl

./: .gitignore  Dockerfile  FILE_STRUCTURE.md  ImplemenationPlanRLIncluded.md  PR_DESCRIPTION_AMENDMENT_03.md  PR_DESCRIPTION_OPTION_A.md  README.md  app.py  client.py  openenv.yaml  pyproject.toml  run_training.sh  train.py  training.ipynb
.github/workflows/: ci.yml
.sisyphus/: boulder.json
.sisyphus/evidence/: f1-compliance-report.md  f2-consistency-report.md  f3-completeness-report.md  task-1-structure-check.txt  task-5-guardrails-check.txt
.sisyphus/plans/: reconciliation-plan.md  rl-parliament-spec.md  wave-1-mathematical-specification.md
agents/: __init__.py  action_parser.py  base.py  prompts.py  random_agent.py
agents/llm/: __init__.py  common.py  dictator.py  hf_client.py  parliamentary.py
agents/rule_based/: __init__.py  conservative.py  discretionary.py  equal_split.py  greedy.py  optimal_zone.py  random_policy.py  voting.py
agents/trained/: __init__.py
assets/results/: benchmark_summary.json
core/: __init__.py  config.py  events.json  events.py  game.py  parliament.py  population.py  productivity.py  revenue.py  reward.py  sector.py  sectors.json  treasury.py
evaluation/: __init__.py  benchmark_policies.py
llm_integration/: __init__.py  context_builder.py  hf_client.py  local_client.py  parsers.py  schemas.py
llm_integration/adapters/: common.py  dictator.py  parliamentary.py
llm_integration/prompts/: dictator.py  minister.py
notebooks/: colab_grpo_training.ipynb
schemas/: __init__.py  actions.py  departments.py  metrics.py  observations.py  phases.py  rewards.py
scripts/: benchmark_baselines.py  benchmark_rewards.py  collect_grpo_prompts.py  deep_audit_run.py  full_simulation_test.py  llm_test_run.py  run_visualizer_server.py  test_retry_loop.py
server/: __init__.py  app.py  environment.py  live_runner.py  models.py  visualizer_server.py
specification/: 00_INDEX.md  01_GAME_OVERVIEW.md  02_GAME_RULES_REFERENCE.md  03_TURN_STRUCTURE.md  04_ECONOMY_MODEL.md  05_VOTING_PROTOCOL.md  06_EVENT_SYSTEM.md  07_AGENT_ACTION_SPACE.md  08_OBSERVATION_SPACE.md  09_REWARD_MODEL.md  10_SUCCESS_CRITERIA.md  11_GUARDRAILS.md  12_GLOSSARY.md  13_RL_ADAPTERS_AND_TRAINING.md  APPENDIX_A_EXAMPLES.md
specification/proposed-amendments/: 01-critical-threshold-abstention-voting-fix.md  02-readme-veracity-and-theme-alignment.md  03-training-spec-alignment.md
telemetry/: __init__.py  episode_logger.py  events.py  jsonl_writer.py  metrics_collector.py  plotter.py  run_summary.py
tests/: test_core.py  test_output.txt
tests/fixtures/: economy_scenarios.py  reward_scenarios.py
tests/integration/: test_benchmark_policies.py  test_game_loop.py  test_openenv_contract.py  test_openenv_server.py
tests/unit/: test_action_schema.py  test_collect_grpo_prompts.py  test_economy_fixtures.py  test_episode_logger.py  test_events.py  test_game_termination.py  test_llm_adapters.py  test_metrics_collector.py  test_parliament.py  test_population.py  test_productivity.py  test_revenue.py  test_reward.py  test_reward_fixtures.py  test_reward_fn.py  test_rule_based_adapters.py  test_sector.py  (+1 more)
training/: __init__.py  reward_fn.py  train_grpo.py  train_trl.py
visualizer/: EPISODE_FORMAT.md  index.html  package-lock.json  package.json  vite.config.js
(+15 files in other folders)
